[package]
name = "ups_monitor_rust"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
linux-embedded-hal = "0.2"
ina219 = { git = "https://gitee.com/sndnvaps/ina219.git" , branch="master" }


ctrlc = "3.2.3"
tracing = "0.1.36"