[package]
name = "ups_monitor_rust"
version = "0.1.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1


[dependencies]
linux-embedded-hal = "0.2"
ina219_rs = { version = "0.5.0", features = ["ina219"] }


ctrlc = "3.2.3"
tracing = "0.1.36"
